avoid /api/v1/api/v1 EKN-1567

--- a/admin.yaml
+++ b/admin.yaml
@@ -1490,4 +1490,4 @@ definitions:
     description: "A UKC user"
 # Added by API Auto Mocking Plugin
 host: ukcep.your_domain
-basePath: /api/v1
+basePath: 
